# ps-promise

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  sync.rs
src/features/anyhow/: mod.rs
src/gate/: loom.rs  mod.rs
src/gate/methods/: mod.rs  new.rs  poll.rs
src/gate/state/: mod.rs
src/gate/state/implementations/: wake.rs
src/gate/state/methods/: mod.rs  new.rs  register.rs  take_wake_request.rs
src/implementations/: debug.rs  default.rs  future.rs  mod.rs  unpin.rs
src/implementations/from/: boxed_promise_future.rs  mod.rs  option.rs  result.rs  task_failure.rs
src/methods/: all.rs  all_settled.rs  any.rs  attempt.rs  attempt_async.rs  catch.rs  consume.rs  detach.rs  eager.rs  eager_or_lazy.rs  eager_with.rs  eager_with_smol.rs  eager_with_tokio.rs  finally.rs  flatten.rs  inspect.rs  inspect_err.rs  is_consumed.rs  is_failed.rs  is_pending.rs  is_ready.rs  is_rejected.rs  is_resolved.rs  is_settled.rs  lazy.rs  map.rs  map_err.rs  mod.rs  new.rs  peek.rs  pending.rs  pending_sync.rs  poll.rs  poll_pending.rs  poll_pending_sync.rs  poll_settled.rs  poll_settled_sync.rs  poll_sync.rs  race.rs  ready.rs  (+14 more)
src/methods/abortable/: aborted.rs  mod.rs  outcome.rs
src/methods/shared/: constants.rs  loom.rs  mod.rs
src/rejection/: mod.rs  unit.rs  vec.rs
src/rejection/task_failure/: mod.rs
src/rejection/wrapped/: mod.rs
src/transformer/: mod.rs
src/transformer/implementations/: clone.rs
src/transformer/methods/: from_async_box_fn.rs  from_async_fn.rs  from_infallible_async_box_fn.rs  from_infallible_async_fn.rs  from_infallible_sync_fn.rs  from_sync_fn.rs  mod.rs
(+40 files in other folders)
