[package]
name = "ps-promise"
version = "0.1.0-14"
edition = "2021"
description = "Promise-like owned futures"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = { version = "1", optional = true }
thiserror = "2.0.17"

[features]
default = []
anyhow = ["dep:anyhow"]

[lints.clippy]
all = "warn"
expect_used = "warn"
nursery = "warn"
pedantic = "warn"
unwrap_used = "warn"

[lints.rust]
unsafe_code = "forbid"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
