[package]
name = "ps-promise"
version = "0.1.0-16"
edition = "2021"
description = "Promise-like owned futures"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = { version = "1", optional = true }
async-channel = "2"
blocking = "1"
smol = { version = "2", optional = true }
thiserror = "2.0.17"
tokio = { version = "1", features = ["rt", "time"], optional = true }

[features]
default = []
anyhow = ["dep:anyhow"]
smol = ["dep:smol"]
tokio = ["dep:tokio"]

[lints.clippy]
all = "warn"
expect_used = "warn"
nursery = "warn"
pedantic = "warn"
unwrap_used = "warn"

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
